tests/pass/while_loop_break.kl
// While loop with break and continue.
fn inisiu() {
    nter i = 0;
    nkuantu i < 10 {
        i = i + 1;
        si i == 3 {
            kontinua;
        }
        si i == 7 {
            para;
        }
        mostra(i);
    }
}
