tests/fail/fail_break_outside_loop.kl
// ERROR: para (break) used outside any loop.
fn inisiu() {
    para;
}
